--- a/template.qmd
+++ b/template.qmd
@@ -12,13 +12,48 @@ patient: Biggie
 
 # Load necessary packages
 packages <- c(
-  "ggtext", "ggthemes", "glue", "gt", "gtExtras", "hablar", "here",
-  "htmlwidgets", "janitor", "knitr", "magick", "png", "manipulateWidget", "quarto",
-  "readxl", "rmarkdown", "scales", "snakecase", "stats", "svglite",
-  "tidyselect", "tidytext", "tidyverse", "webshot2", "widgetframe", "xfun",
-  "yaml", "bwu"
+  "ggtext",
+  "ggthemes",
+  "glue",
+  "gt",
+  "gtExtras",
+  "hablar",
+  "here",
+  "htmlwidgets",
+  "janitor",
+  "knitr",
+  "magick",
+  "png",
+  "manipulateWidget",
+  "quarto",
+  "readxl",
+  "rmarkdown",
+  "scales",
+  "snakecase",
+  "stats",
+  "svglite",
+  "tidyselect",
+  "tidytext",
+  "tidyverse",
+  "webshot2",
+  # "bwu",
+  "widgetframe",
+  "xfun"
 )
-xfun::pkg_load2(packages)
+
+# Function to load packages one by one
+load_packages <- function(packages) {
+  for (pkg in packages) {
+    if (!require(pkg, character.only = TRUE)) {
+      install.packages(pkg)
+      library(pkg, character.only = TRUE)
+    }
+    message(paste("Loaded package:", pkg))
+  }
+}
+
+# Call the function to load packages
+load_packages(packages)
 
 # Set knitr options
 knitr::opts_knit$set(width = 80, digits = 2, warnPartialMatchArgs = FALSE)
@@ -40,7 +75,7 @@ return_plot <- Sys.getenv("RETURN_PLOT")
 #| label: data-load
 #| include: false
 
-file_path <- here::here(patient)
+file_path <- here::here()
 bwu::load_data(here::here(file_path))
 neurocog <- readr::read_csv("neurocog.csv")
 neurobehav <- readr::read_csv("neurobehav.csv")
@@ -50,7 +85,7 @@ validity <- readr::read_csv("validity.csv")
 
 ```{=typst}
 #let name = [Biggie Smalls]
-#let doe = [2023-01-02]
+#let doe = [2024-04-02]
 #let patient = [Biggie]
 #v(2em, weak: true)
 #show block: set par(leading: 0.65em)
@@ -58,7 +93,6 @@ validity <- readr::read_csv("validity.csv")
 *PATIENT NAME:* #name \
 *DATES OF EXAM:* {{< var doe1 >}}, {{< var doe2 >}}, and {{< var doe3 >}} \
 ]
-// #show heading.where(level: 1): set align(center)
 ```
 
 {{< include _00-00_tests.qmd >}}
@@ -85,21 +119,21 @@ validity <- readr::read_csv("validity.csv")
 
 {{< include _02-06_memory.qmd >}}
 
-<!-- {{< include _02-07_motor.qmd >}} -->
+{{< include _02-07_motor.qmd >}}
 
-<!-- {{< include _02-08_social.qmd >}} -->
+{{< include _02-08_social.qmd >}}
 
-{{< include _02-09_adhd_child_text.qmd >}}
+<!-- {{< include _02-09_adhd_child_text.qmd >}} -->
 
 {{< include _02-09_adhd_child.qmd >}}
 
-{{< include _02-10_emotion_child_text.qmd >}}
+<!-- {{< include _02-10_emotion_child_text.qmd >}} -->
 
 {{< include _02-10_emotion_child.qmd >}}
 
-{{< include _02-10_emotion_parent_text.qmd >}}
+<!-- {{< include _02-10_emotion_parent_text.qmd >}} -->
 
-<!-- {{< include _02-11_adaptive.qmd >}} -->
+{{< include _02-11_adaptive.qmd >}}
 
 <!-- {{< pagebreak >}} -->
 
