--- a/_02-03_verbal_text.qmd
+++ b/_02-03_verbal_text.qmd
@@ -1,4 +1,4 @@
-Leo evidenced a range of abilities in verbal skills, with notable challenges in word fluency.
+{{< var patient >}} evidenced a range of abilities in verbal skills, with notable challenges in word fluency.
 
 - **Comprehension**: Average, which signifies no apparent difficulties in
 understanding spoken language. This impacts daily communication, understanding
@@ -13,8 +13,8 @@ instructions, or following verbal directions.
 <<START>>
 
 Ability to name objects and actions fell within the Above Average.
-Leo's Comprehension of Instructions score of 14 () is classified as Above Average and is ranked at the 91th percentile, indicating performance as good as or better than 91% of same age peers from the general population. This estimate of Receptive language processing and the ability to follow multistep instructions is considered a relative neurocognitive strength.
+{{< var patient >}}'s Comprehension of Instructions score of 14 () is classified as Above Average and is ranked at the 91th percentile, indicating performance as good as or better than 91% of same age peers from the general population. This estimate of Receptive language processing and the ability to follow multistep instructions is considered a relative neurocognitive strength.
 General knowledge and ability to recall and understand information fell within the High Average.
 Receptive language ability, vocabulary development, and ability to understand and use words fell within the Average.
-Leo's Body Part Naming score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Correctly naming body parts is considered an extreme relative neurocognitive weakness and a clinically significant concern.
-Leo's Body Part Identification score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Correctly identifying body parts is considered an extreme relative neurocognitive weakness and a clinically significant concern.
+{{< var patient >}}'s Body Part Naming score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Correctly naming body parts is considered an extreme relative neurocognitive weakness and a clinically significant concern.
+{{< var patient >}}'s Body Part Identification score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Correctly identifying body parts is considered an extreme relative neurocognitive weakness and a clinically significant concern.
