--- a/_02-07_motor_text.qmd
+++ b/_02-07_motor_text.qmd
@@ -21,10 +21,10 @@ Gross motor functioning including balance and gait appeared intact on observatio
 <<START>>
 
 
-Leo's Imitating Hand Positions score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions is considered a relative neurocognitive weakness and moderate concern.
-Leo's Imitating Hand Positions-Dominant score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions (dominant hand) is considered undefined.
-Leo's Imitating Hand Positions-Nondominant score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions (nondominant hand) is considered undefined.
-Leo's Visuomotor Precision Completion Time score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (time) is considered undefined.
-Leo's Visuomotor Precision Errors score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (errors) is considered undefined.
-Leo's Visuomotor Precision score of  4 () is classified as Exceptionally Low and is ranked at the 4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Graphomotor speed and accuracy is considered an extreme relative neurocognitive weakness and a clinically significant concern.
-Leo's Visuomotor Precision Pencil Lifts score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (pencil lifts) is considered undefined.
+{{< var patient >}}'s Imitating Hand Positions score of  0 () is classified as Below Average and is ranked at the  4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions is considered a relative neurocognitive weakness and moderate concern.
+{{< var patient >}}'s Imitating Hand Positions-Dominant score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions (dominant hand) is considered undefined.
+{{< var patient >}}'s Imitating Hand Positions-Nondominant score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Ability to imitate hand and finger positions (nondominant hand) is considered undefined.
+{{< var patient >}}'s Visuomotor Precision Completion Time score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (time) is considered undefined.
+{{< var patient >}}'s Visuomotor Precision Errors score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (errors) is considered undefined.
+{{< var patient >}}'s Visuomotor Precision score of  4 () is classified as Exceptionally Low and is ranked at the 4th percentile, indicating performance as good as or better than  4% of same age peers from the general population. This estimate of Graphomotor speed and accuracy is considered an extreme relative neurocognitive weakness and a clinically significant concern.
+{{< var patient >}}'s Visuomotor Precision Pencil Lifts score of NA () is classified as  and is ranked at the NAth percentile, indicating performance as good as or better than NA% of same age peers from the general population. This estimate of Graphomotor speed and accuracy (pencil lifts) is considered undefined.
