--- a/_03-02_signature.qmd
+++ b/_03-02_signature.qmd
@@ -1,8 +1,8 @@
-Thank you for considering this report in your evaluation of Biggie. I am available to provide further information or clarification as needed.
+Thank you for considering this report in your evaluation of {{< var patient >}}. I am available to provide further information or clarification as needed.
 
 Respectfully submitted,
 
-It was a pleasure to work with Biggie.
+It was a pleasure to work with {{< var patient >}}.
 Please contact me with any questions or concerns regarding this patient.
 
 Sincerely,
@@ -13,7 +13,7 @@ Sincerely,
 #| out-width: 10em
 #| echo: false
 #| eval: true
-knitr::include_graphics("jwt_phd.png")
+knitr::include_graphics("jwt_sig.png")
 ```
 
 ```{=typst}
@@ -29,4 +29,3 @@ Keck School of Medicine of USC \
 CA License No. PSY29212
 ]
 ```
-
