--- a/template.qmd
+++ b/template.qmd
@@ -72,7 +72,7 @@ return_plot <- Sys.getenv("RETURN_PLOT")
 #| label: data-load
 #| include: false
 
-file_path <- here::here()
+file_path <- here::here("data/csv")
 bwu::load_data(here::here(file_path))
 neurocog <- vroom::vroom("neurocog.csv")
 neurobehav <- vroom::vroom("neurobehav.csv")
@@ -120,15 +120,15 @@ validity <- vroom::vroom("validity.csv")
 
 {{< include _02-08_social.qmd >}}
 
-<!-- {{< include _02-09_adhd_child_text.qmd >}} -->
+{{< include _02-09_adhd_child_text.qmd >}}
 
 {{< include _02-09_adhd_child.qmd >}}
 
-<!-- {{< include _02-10_emotion_child_text.qmd >}} -->
+{{< include _02-10_emotion_child_text.qmd >}}
 
 {{< include _02-10_emotion_child.qmd >}}
 
-<!-- {{< include _02-10_emotion_parent_text.qmd >}} -->
+{{< include _02-10_emotion_parent_text.qmd >}}
 
 {{< include _02-11_adaptive.qmd >}}
 
@@ -142,6 +142,6 @@ validity <- vroom::vroom("validity.csv")
 
 {{< include _03-02_signature.qmd >}}
 
-{{< pagebreak >}}
+<!-- {{< pagebreak >}} -->
 
 {{< include _03-03_appendix.qmd >}}
