--- a/_02-10_emotion_child.qmd
+++ b/_02-10_emotion_child.qmd
@@ -143,7 +143,7 @@ scales <- c(
   "Depression",
   "Emotional Symptoms Index",
   "Externalizing Problems",
-  "Functional Communication"
+  "Functional Communication",
   "Hyperactivity",
   "Inattention/Hyperactivity",
   "Internalizing Problems",
