--- a/_02-03_verbal.qmd
+++ b/_02-03_verbal.qmd
@@ -18,10 +18,10 @@ pheno <- "verbal"
 #| include: false
 
 # Read the CSV file into a data frame
-verbal <- readr::read_csv("neurocog.csv")
+verbal <- vroom::vroom("neurocog.csv")
 
 # Filter the data frame to keep only rows where 'domain' equals 'domains'
-verbal <- verbal |> dplyr::filter(domain == domains)
+verbal <- verbal |> dplyr::filter(domain %in% domains)
 
 verbal <- verbal |>
   dplyr::select(
@@ -257,9 +257,9 @@ options(warn = 0) # Reset to default behavior
 ```
 
 
-<!-- ```{=typst}
+```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Merriweather", size: 0.7em)
+  let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
   pad(top: 0.5em)[]
     grid(
@@ -281,23 +281,23 @@ options(warn = 0) # Reset to default behavior
           ),
         )
     }
-``` -->
+```
 
-<!-- ```{=typst}
+```{=typst}
 #let title = "Verbal/Language"
 #let file_qtbl = "table_verbal.png"
 #let file_fig = "fig_verbal_subdomain.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
 )
-``` -->
+```
 
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Merriweather", size: 0.7em)
+  let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
   pad(top: 0.5em)[]
     grid(
@@ -325,7 +325,7 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_verbal.png"
 #let file_fig = "fig_verbal_narrow.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
 )
