--- a/_02-05_memory.qmd
+++ b/_02-05_memory.qmd
@@ -1,6 +1,6 @@
 ## Memory {#sec-memory}
 
-{{< include _02-06_memory_text.qmd >}}
+{{< include _02-05_memory_text.qmd >}}
 
 ```{r}
 #| label: setup-memory
@@ -18,12 +18,12 @@ pheno <- "memory"
 #| include: false
 
 # Read the CSV file into a data frame
-memory <- readr::read_csv("neurocog.csv")
+memory <- vroom::vroom("neurocog.csv")
 
 # Filter the data frame based on certain conditions
 # Keep only the rows where 'domain' equals 'domains' and 'z_mean_domain' is not NA
 memory <- memory |>
-  dplyr::filter(domain == domains)
+  dplyr::filter(domain %in% domains)
 
 # Select specific columns from the data frame
 memory <- memory |>
@@ -168,7 +168,7 @@ data_memory <- bwu::filter_data(data, domain = domains, scale = scales)
 #| include: false
 
 # Generate the text for the memory domain
-bwu::cat_neuropsych_results(data = data_memory, file = "_02-06_memory_text.qmd")
+bwu::cat_neuropsych_results(data = data_memory, file = "_02-05_memory_text.qmd")
 ```
 
 ```{r}
@@ -273,10 +273,10 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # footnotes
-fn_scaled_score <- gt::md("Scaled Score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
-fn_standard_score <- gt::md("Index Score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
-fn_t_score <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
-fn_z_score <- gt::md("_z_-Score: Mean = 0 [50th‰], SD ± 1 [16th‰, 84th‰]")
+fn_scaled_score <- gt::md("Scaled score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
+fn_standard_score <- gt::md("Index score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+fn_z_score <- gt::md("_z_-score: Mean = 0 [50th‰], SD ± 1 [16th‰, 84th‰]")
 
 # groupings
 grp_memory <- list(
@@ -307,8 +307,7 @@ bwu::tbl_gt(
 #| include: false
 #| fig-cap: "Learning and memory refer to the rate and ease with which new information (e.g., facts, stories, lists, faces, names) can be encoded, stored, and later recalled from long-term memory."
 
-
-# Dotplot arguments
+# dotplot arguments
 x <- data_memory$z_mean_narrow
 y <- data_memory$narrow
 colors <- NULL
@@ -335,7 +334,7 @@ options(warn = 0) # Reset to default behavior
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Merriweather", size: 0.7em)
+  let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
   pad(top: 0.5em)[]
     grid(
@@ -366,7 +365,7 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_memory.png"
 #let file_fig = "fig_memory.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
 )
