--- a/_02-06_executive.qmd
+++ b/_02-06_executive.qmd
@@ -1,10 +1,13 @@
 ## Attention/Executive {#sec-executive}
 
-{{< include _02-05_executive_text.qmd >}}
+{{< include _02-06_executive_text.qmd >}}
 
 ```{r}
 #| label: setup-executive
 #| include: false
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
 
 # domain
 domains <- c("Attention/Executive")
@@ -18,12 +21,12 @@ pheno <- "executive"
 #| include: false
 
 # Read the CSV file into a data frame
-executive <- readr::read_csv("neurocog.csv")
+executive <- vroom::vroom("neurocog.csv")
 
 # Filter the data frame based on certain conditions
 # Keep only the rows where 'domain' equals 'domains' and 'z_mean_domain' is not NA
 executive <- executive |>
-  dplyr::filter(domain == domains)
+  dplyr::filter(domain %in% domains)
 
 # Select specific columns from the data frame
 executive <- executive |>
@@ -165,7 +168,7 @@ data_executive <- bwu::filter_data(data, domain = domains, scale = scales)
 #| include: false
 
 # Generate the text for the executive domain
-bwu::cat_neuropsych_results(data = data_executive, file = "_02-05_executive_text.qmd")
+bwu::cat_neuropsych_results(data = data_executive, file = "_02-06_executive_text.qmd")
 ```
 
 ```{r}
@@ -183,87 +186,87 @@ data_executive <-
   dplyr::filter(test_name != "CVLT-3 Brief") |>
   dplyr::filter(scale != "Orientation") |>
   dplyr::filter(scale %in% c(
-  "Animal Coding",
-  "Arithmetic",
-  "Attention Domain",
-  "Attention Index",
-  "Auditory Working Memory (AWMI)",
-  "Bug Search",
-  # "Cancellation Random",
-  # "Cancellation Structured",
-  "Cancellation",
-  "Categories",
-  "Category Fluency",
-  "Clock Drawing",
-  "Coding",
-  "Cognitive Proficiency (CPI)",
-  "Comprehension",
-  # "CVLT-3 Total Intrusions",
-  # "CVLT-3 Total Repetitions",
-  "D-KEFS Color Naming",
-  "D-KEFS Inhibition Total Errors",
-  "D-KEFS Inhibition",
-  "D-KEFS Switching Total Errors",
-  "D-KEFS Switching",
-  "D-KEFS Word Reading",
-  "Digit Span Backward",
-  "Digit Span Forward",
-  "Digit Span Sequencing",
-  "Digit Span",
-  "Digits Backward Longest Span",
-  "Digits Backward",
-  "Digits Forward Longest Span",
-  "Digits Forward",
-  "Dots",
-  "Driving Scenes",
-  "Spatial Addition",
-  "Executive Functions Domain",
-  "Judgment",
-  "Letter Fluency",
-  "Letter-Number Sequencing",
-  "List Memory Intrusions",
-  "List Memory Repetitions",
-  "Longest Digit Span Backward",
-  "Longest Digit Span Forward",
-  "Longest Digit Span Sequence",
-  "Longest Letter-Number Sequence",
-  "Mazes",
-  "NAB Attention Index",
-  "NAB Executive Functions Index",
-  "Numbers & Letters Part A Efficiency",
-  # "Numbers & Letters Part A Errors",
-  # "Numbers & Letters Part A Speed",
-  "Numbers & Letters Part B Efficiency",
-  "Numbers & Letters Part C Efficiency",
-  "Numbers & Letters Part D Disruption",
-  "Numbers & Letters Part D Efficiency",
-  "Orientation",
-  "Picture Memory",
-  "Picture Span",
-  "Processing Speed (PSI)",
-  "Processing Speed",
-  "Psychomotor Speed",
-  "ROCFT Copy",
-  "Sentence Repetition",
-  "Similarities",
-  "Spatial Span",
-  "Statue",
-  # "Statue-Body Movement",
-  # "Statue-Eye Opening",
-  # "Statue-Vocalization",
-  "Symbol Search",
-  "Symbol Span",
-  "TMT, Part A",
-  "TMT, Part B",
-  "Total Deviation Score",
-  "Unstructured Task",
-  "Word Generation Perseverations",
-  "Word Generation",
-  "Working Memory (WMI)",
-  "Working Memory",
-  "Zoo Locations"
+    "Animal Coding",
+    "Arithmetic",
+    "Attention Domain",
+    "Attention Index",
+    "Auditory Working Memory (AWMI)",
+    "Bug Search",
+    # "Cancellation Random",
+    # "Cancellation Structured",
+    "Cancellation",
+    "Categories",
+    "Category Fluency",
+    "Clock Drawing",
+    "Coding",
+    "Cognitive Proficiency (CPI)",
+    "Comprehension",
+    # "CVLT-3 Total Intrusions",
+    # "CVLT-3 Total Repetitions",
+    "D-KEFS Color Naming",
+    "D-KEFS Inhibition Total Errors",
+    "D-KEFS Inhibition",
+    "D-KEFS Switching Total Errors",
+    "D-KEFS Switching",
+    "D-KEFS Word Reading",
+    "Digit Span Backward",
+    "Digit Span Forward",
+    "Digit Span Sequencing",
+    "Digit Span",
+    "Digits Backward Longest Span",
+    "Digits Backward",
+    "Digits Forward Longest Span",
+    "Digits Forward",
+    "Dots",
+    "Driving Scenes",
+    "Spatial Addition",
+    "Executive Functions Domain",
+    "Judgment",
+    "Letter Fluency",
+    "Letter-Number Sequencing",
+    "List Memory Intrusions",
+    "List Memory Repetitions",
+    "Longest Digit Span Backward",
+    "Longest Digit Span Forward",
+    "Longest Digit Span Sequence",
+    "Longest Letter-Number Sequence",
+    "Mazes",
+    "NAB Attention Index",
+    "NAB Executive Functions Index",
+    "Numbers & Letters Part A Efficiency",
+    # "Numbers & Letters Part A Errors",
+    # "Numbers & Letters Part A Speed",
+    "Numbers & Letters Part B Efficiency",
+    "Numbers & Letters Part C Efficiency",
+    "Numbers & Letters Part D Disruption",
+    "Numbers & Letters Part D Efficiency",
+    "Orientation",
+    "Picture Memory",
+    "Picture Span",
+    "Processing Speed (PSI)",
+    "Processing Speed",
+    "Psychomotor Speed",
+    "ROCFT Copy",
+    "Sentence Repetition",
+    "Similarities",
+    "Spatial Span",
+    "Statue",
+    # "Statue-Body Movement",
+    # "Statue-Eye Opening",
+    # "Statue-Vocalization",
+    "Symbol Search",
+    "Symbol Span",
+    "TMT, Part A",
+    "TMT, Part B",
+    "Total Deviation Score",
+    "Unstructured Task",
+    "Word Generation Perseverations",
+    "Word Generation",
+    "Working Memory (WMI)",
+    "Working Memory",
+    "Zoo Locations"
     # add RBANS
-))
+  ))
 
 # table arguments
 table_name <- "table_executive"
@@ -271,10 +274,10 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # footnotes
-fn_scaled_score <- gt::md("Scaled Score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
-fn_standard_score <- gt::md("Index Score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
-fn_t_score <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
-fn_z_score <- gt::md("_z_-Score: Mean = 0 [50th‰], SD ± 1 [16th‰, 84th‰]")
+fn_scaled_score <- gt::md("Scaled score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
+fn_standard_score <- gt::md("Standard score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+fn_z_score <- gt::md("_z_-score: Mean = 0 [50th‰], SD ± 1 [16th‰, 84th‰]")
 
 # groupings
 grp_executive <- list(
@@ -288,14 +291,14 @@ bwu::tbl_gt(
   data = data_executive,
   pheno = pheno,
   table_name = table_name,
-  vertical_padding = vertical_padding,
   fn_scaled_score = fn_scaled_score,
-  # fn_standard_score = fn_standard_score,
+  fn_standard_score = fn_standard_score,
   fn_t_score = fn_t_score,
   grp_scaled_score = grp_executive[["scaled_score"]],
-  # grp_standard_score = grp_executive[["standard_score"]],
+  grp_standard_score = grp_executive[["standard_score"]],
   grp_t_score = grp_executive[["t_score"]],
   dynamic_grp = grp_executive,
+  vertical_padding = vertical_padding,
   multiline = multiline
 )
 ```
@@ -305,13 +308,14 @@ bwu::tbl_gt(
 #| include: false
 #| fig-cap: "Attention and executive functions are essential for successful cognitive functioning, enabling us to perform everyday tasks, handle academic challenges, solve problems, manage our emotions, and interact effectively with others and our environment."
 
-# args
+# dotplot arguments
+filename <- "fig_executive_subdomain.svg"
+colors <- NULL
+return_plot <- Sys.getenv("RETURN_PLOT")
+
+# dotplot variables to plot (x, y)
 x <- data_executive$z_mean_subdomain
 y <- data_executive$subdomain
-colors <- NULL
-# return_plot <- TRUE
-return_plot <- Sys.getenv("RETURN_PLOT")
-filename <- "fig_executive_subdomain.svg"
 
 # Suppress warnings from being converted to errors
 options(warn = 1) # Set warn to 1 to make warnings not halt execution
@@ -335,16 +339,14 @@ options(warn = 0) # Reset to default behavior
 #| include: false
 #| fig-cap: "Attention and executive functions are essential for successful cognitive functioning, enabling us to perform everyday tasks, handle academic challenges, solve problems, manage our emotions, and interact effectively with others and our environment."
 
-# args2
+# dotplot arguments
+filename <- "fig_executive_narrow.svg"
+colors <- NULL
+return_plot <- Sys.getenv("RETURN_PLOT")
+
+# dotplot variables to plot (x, y)
 x <- data_executive$z_mean_narrow
 y <- data_executive$narrow
-colors <- NULL
-# return_plot <- TRUE
-return_plot <- Sys.getenv("RETURN_PLOT")
-filename <- "fig_executive_narrow.svg"
-
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
 
 bwu::dotplot(
   data = data_executive,
@@ -362,7 +364,7 @@ options(warn = 0) # Reset to default behavior
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Merriweather", size: 0.7em)
+  let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
   pad(top: 0.5em)[]
     grid(
@@ -393,14 +395,14 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_executive.png"
 #let file_fig = "fig_executive_subdomain.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
   )
 ```
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Merriweather", size: 0.7em)
+  let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
     grid(
       columns: (50%, 50%),
@@ -430,7 +432,7 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_executive.png"
 #let file_fig = "fig_executive_narrow.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
   )
