--- a/template.qmd
+++ b/template.qmd
@@ -72,7 +72,7 @@ return_plot <- Sys.getenv("RETURN_PLOT")
 #| label: data-load
 #| include: false
 
-file_path <- here::here("data/csv")
+file_path <- here::here("data", "csv")
 bwu::load_data(here::here(file_path))
 neurocog <- vroom::vroom("neurocog.csv")
 neurobehav <- vroom::vroom("neurobehav.csv")
@@ -94,7 +94,7 @@ validity <- vroom::vroom("validity.csv")
 
 {{< include _00-00_tests.qmd >}}
 
-<!-- {{< pagebreak >}} -->
+{{< pagebreak >}}
 
 {{< include _01-00_nse.qmd >}}
 
@@ -112,25 +112,19 @@ validity <- vroom::vroom("validity.csv")
 
 {{< include _02-04_spatial.qmd >}}
 
-{{< include _02-05_executive.qmd >}}
+{{< include _02-05_memory.qmd >}}
 
-{{< include _02-06_memory.qmd >}}
+{{< include _02-06_executive.qmd >}}
 
-{{< include _02-07_motor.qmd >}}
+<!-- {{< include _02-07_motor.qmd >}} -->
 
-{{< include _02-08_social.qmd >}}
+<!-- {{< include _02-08_social.qmd >}} -->
 
-{{< include _02-09_adhd_child_text.qmd >}}
+{{< include _02-09_adhd_adult.qmd >}}
 
-{{< include _02-09_adhd_child.qmd >}}
+{{< include _02-10_emotion_adult.qmd >}}
 
-{{< include _02-10_emotion_child_text.qmd >}}
-
-{{< include _02-10_emotion_child.qmd >}}
-
-{{< include _02-10_emotion_parent_text.qmd >}}
-
-{{< include _02-11_adaptive.qmd >}}
+<!-- {{< include _02-11_adaptive.qmd >}} -->
 
 <!-- {{< pagebreak >}} -->
 
@@ -142,6 +136,6 @@ validity <- vroom::vroom("validity.csv")
 
 {{< include _03-02_signature.qmd >}}
 
-<!-- {{< pagebreak >}} -->
+{{< pagebreak >}}
 
 {{< include _03-03_appendix.qmd >}}
